<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flags of the World Game</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_banner">Welcome!</string>
    <string name="start_easy_game">Start Easy Game</string>
    <string name="start_difficult_game">Start Difficult Game</string>
    <string name="view_high_scores">View High Scores</string>
    <string name="flag_of_the_united_states_of_america">Flag of the United States of America</string>
    <string name="title_activity_easy_game">EasyGameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="flag">flag</string>
    <string name="option1">option1</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="correct_text">Correct:</string>
    <string name="asked_text">Asked:</string>
    <string name="correctVal">0</string>
    <string name="askedVal">0</string>
    <string name="title_activity_end_game">End Game</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_difficult_game">Difficult Game</string>
    <string name="enter_answer_here">Enter Answer Here:</string>

</resources>