<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EasyGameActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/flag"
        android:src="@drawable/germany" />

    <RadioGroup
        android:id="@+id/radioChoices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
	    <RadioButton
	        android:id="@+id/radioChoice1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/option1" />
	
	    <RadioButton
	        android:id="@+id/radioChoice2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/option1" />
	
	    <RadioButton
	        android:id="@+id/radioChoice3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/option1" />
	
	    <RadioButton
	        android:id="@+id/radioChoice4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/option1" />

    </RadioGroup>
    
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_answer" 
        android:layout_marginTop="30dp"
        android:onClick="submit"
        android:enabled="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/correctValView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctVal"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asked_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/askedValView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/askedVal"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>